--- a/pom.xml
+++ b/pom.xml
@@ -95,12 +95,18 @@
             <version>3.0.0</version>
             <scope>provided</scope>
         </dependency>
-   <!--     <dependency>
-            <groupId>jakarta.json.bind</groupId>
-            <artifactId>jakarta.json.bind-api</artifactId>
-            <version>2.0.0</version>
-            <scope>provided</scope>
-        </dependency>-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <!--     <dependency>
+                 <groupId>jakarta.json.bind</groupId>
+                 <artifactId>jakarta.json.bind-api</artifactId>
+                 <version>2.0.0</version>
+                 <scope>provided</scope>
+             </dependency>-->
     </dependencies>
 
     <build>
